[package]
name = "adaptive-card-rs"
version = "0.3.0"
edition = "2024"
description = "A Rust crate for working with Adaptive Cards, a format for rendering card-like user interfaces."
documentation = "https://docs.rs/adaptive-card-rs"
homepage = "https://github.com/cobbinma/adaptive-card-rs"
repository = "https://github.com/cobbinma/adaptive-card-rs"
license = "MIT OR Apache-2.0"
keywords = ["adaptive-cards", "json", "ui"]
categories = ["development-tools", "web-programming"]
readme = "README.md"
exclude = ["/.github", "./schema.json"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
expect-test = "1.5"
jsonschema = "0.30.0"
lazy_static = "1.5.0"
